--- a/index.html
+++ b/index.html
@@ -130,14 +130,19 @@
 
 
     <footer class="footer">
-        <a class="footer-logo" href="#"WebStudio></a>
-        <address class="footer-address">
-           <ul class="footer-list">
-            <li class="footer-list-item"><a class="footer-addres-link" href="#">m.Warszawa, Aleje Jerozolimskie</a>
-            <li class="footer-list-item"><a class="footer-mailto" href="mailto:info@example.com">info@example.com</a></li>
-            <li class="footer-list-item"><a class="footer-phone-number" href="tel:+48111111111">+48 111 111 111</a></li>
-           </ul>
-        </address>
+        <div class="container">
+            <a class="navigation__logo-down" href="index.html">Web<span class="navigation__logo-sec-down">Studio</span></a>
+            <address class="address">
+                <ul class="address__list">
+                    <li><a class="inmap__adress" href="https://goo.gl/maps/x3iuPh3qe1rizQfR7" target="_blank">m. Warszawa, Aleje
+                            Jerozolimskie 21</a></li>
+                    <li><a class="email__down" href="mailto:info@example.com">info@example.com</a></li>
+                    <li><a class="phone__number-down" href="tel:48111111111">+48 111 111 111</a></li>
+                </ul>
+            </address>
+
+        </div>
+        
 
     </footer>
 
